--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,1 +1,14 @@
-#prueba
+name: Semgrep Scan
+run-name: Semgrep Scan
+on: [push]
+jobs:
+  checkout:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v5
+      - name: Persist Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: .
