--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -8,7 +8,15 @@ jobs:
       - name: Code Checkout
         uses: actions/checkout@v5
       - name: Persist Artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: my-artifact
           path: .
+  
+  semgrep:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Semgrep
+        run: |
+          python3 -m pip install semgrep
+          semgrep --version
