--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/checkout@v5
       - name: Executes Semgrep
         run: |
-          ls -la
-          pwd
-          semgrep ci
+          semgrep --config "p/default" --metrics=off --json -o semgrep_report.json
+      - name: Persist Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: semgrep_report
+          path: semgrep_report.json
