--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v5
       - name: Executes Semgrep
         run: |
-          semgrep --config "p/default" --metrics=off --json -o semgrep_report.json
+          semgrep --config "p/security-audit" --include "sql" --metrics=off --json -o semgrep_report.json
       - name: Persist Artifact
         uses: actions/upload-artifact@v4
         with:
